# Ninja_C

./: .gitignore  CMakeLists.txt  README.md
resources/maps/: main_map.tmj
src/: character.c  character.h  game.c  game.h  globalVar.h  helpers.c  helpers.h  main.c
